--- a/detalles.html
+++ b/detalles.html
@@ -4,8 +4,41 @@
   <meta charset="UTF-9" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Detalles del Cumpleaños</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+<script>
+  function lanzarConfeti() {
+    const duration = 2 * 1000;
+    const animationEnd = Date.now() + duration;
+    const defaults = { startVelocity: 20, spread: 360, ticks: 600, zIndex: 1000 };
+
+    function randomInRange(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+
+    const interval = setInterval(function () {
+      const timeLeft = animationEnd - Date.now();
+
+      if (timeLeft <= 0) {
+        return clearInterval(interval);
+      }
+
+      confetti({
+        ...defaults,
+        particleCount: 6,
+        origin: {
+          x: randomInRange(0.1, 0.9),
+          y: Math.random() - 0.2
+        }
+      });
+    }, 200);
+  }
+
+  window.addEventListener('load', lanzarConfeti);
+</script>
+
 <body>
   <div class="detalles">
     <div class="flores-izquierda"></div>
