--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
 </head>
+
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+<script>
+  function lanzarConfeti() {
+    const duration = 2 * 1000;
+    const animationEnd = Date.now() + duration;
+    const defaults = { startVelocity: 20, spread: 360, ticks: 600, zIndex: 1000 };
+
+    function randomInRange(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+
+    const interval = setInterval(function () {
+      const timeLeft = animationEnd - Date.now();
+
+      if (timeLeft <= 0) {
+        return clearInterval(interval);
+      }
+
+      confetti({
+        ...defaults,
+        particleCount: 6,
+        origin: {
+          x: randomInRange(0.1, 0.9),
+          y: Math.random() - 0.2
+        }
+      });
+    }, 200);
+  }
+
+  window.addEventListener('load', lanzarConfeti);
+</script>
+
 <body>
   <div class="invitacion">
     <div class="flores-izquierda"></div>
@@ -28,6 +62,6 @@
     <button onclick="verDetalles()">Ver mas</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=1.0.2"></script>
 </body>
 </html>
