--- a/detalles.html
+++ b/detalles.html
@@ -40,6 +40,7 @@
 
 <body>
   <div class="detalles">
+    <div class="stickers2"></div>
     <div class="flores-izquierda"></div>
     <div class="flores-derecha-abajo"></div>
     <h1 class="nombre2">Lugar del evento</h1>
@@ -52,7 +53,7 @@
       allowfullscreen="" 
       loading="lazy"></iframe>
     
-    <button onclick="confirmarAsistencia()">Confirmar Asistencia</button>
+    <button onclick="confirmarAsistencia()">Confirmar</button>
 
   </div>
 
