--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 <body>
   <div class="invitacion">
+    <div class="stickersin"></div>
     <div class="flores-izquierda"></div>
     <div class="flores-derecha-abajo"></div>
     <h1 class="numero">20</h1>
@@ -60,7 +61,6 @@
 </div>
     <button onclick="verDetalles()">Ver mas</button>
   </div>
-
   <script src="script.js?v=1.0.3"></script>
 </body>
 </html>
