--- a/detalles.html
+++ b/detalles.html
@@ -40,7 +40,7 @@
 
 <body>
   <div class="detalles">
-    <div class="stickers2"></div>
+    <div class="stickersin2"></div>
     <div class="flores-izquierda"></div>
     <div class="flores-derecha-abajo"></div>
     <h1 class="nombre2">Lugar del evento</h1>
@@ -124,6 +124,6 @@
     </div>
   </div>
 </div>
-  <script src="script.js?v=2.0.3"></script>
+  <script src="script.js?v=2.0.4"></script>
 </body>
 </html>
