--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <div class="flores-izquierda"></div>
     <div class="flores-derecha-abajo"></div>
     <h1 class="numero">20</h1>
-    <h2 class="nombre">Anett Ordaz</h2>
+    <h2 class="nombre">Anette Ordaz</h2>
     <div class="info">
   <div class="info-row">
     <span class="dia">VIERNES</span>
     <span class="numero">18</span>
-    <span class="hora">7:00pm</span>
+    <span class="hora">6:00pm</span>
   </div>
   <div class="fecha">JULIO</div>
   <div class="direccion">Francisco I. Madero 4, Vistha</div>
