--- a/detalles.html
+++ b/detalles.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Detalles del Cumpleaños</title>
-  <link rel="stylesheet" href="style.css?v=2.2.2"/>
+  <link rel="stylesheet" href="style.css?v=2.2.1"/>
 </head>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script>
@@ -44,7 +44,7 @@
     <div class="flores-izquierda"></div>
     <div class="flores-derecha-abajo"></div>
     <h1 class="nombre2">Lugar del evento</h1>
-    <p>Francisco I. Madero 4, Vistha, 76810 San Nicolás, Qro.</p>
+    <p>Francisco I. Madero 4, Vistha, 76810, SJR, Qro.</p>
     <iframe 
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.5221355762713!2d-100.38871978509863!3d20.684774586751473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d048dcde1a0a3%3A0x9427ffbd0e8a6b74!2sFrancisco%20I.%20Madero%204%2C%20Vistha%2C%2076810%20San%20Nicol%C3%A1s%2C%20Qro.!5e0!3m2!1ses!2smx!4v1688580000000!5m2!1ses!2smx" 
       width="100%" 
